Fixed panel spacing regressions from 544d2eb6
Specifically, the change removed the "add page" panel padding,
because it moved padding from .cms-panel-padded into
commonly contained elements, like .ui-tabs-panel.
Apart from breaking layouts, it makes the class meaningless,
since its only padded depending on which elements it contains.

In order to rectify some introduced inconsistencies,
much too complex were required, e.g.
.ui-tabs .cms-edit-form, .ui-tabs .cms-content-fields {...}.

--- a/scss/AssetUploadField.scss
+++ b/scss/AssetUploadField.scss
@@ -17,7 +17,6 @@
 #AssetUploadField {
 	border-bottom: 0;
 	@include box-shadow(none);
-	padding: 12px;
 }
 .backlink {
 	padding-left: 12px;
